--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-43373805-1', 'luca090902.github.io');
+  ga('create', 'UA-43373805-1', 'krautscript.de');
   ga('send', 'pageview');
 </script>
 </body>
