--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <style type="text/css">
 
     #logo {
-      color: #ffcc00;
+      color: black;
       font-family: 'Lilita One', cursive;
-      text-shadow: 0px 2px 0px black;
+      text-shadow: 0px 2px 0px #d00;
       font-size: 40px;
       padding-top: 20px;
     }
@@ -42,7 +42,7 @@
     }
 
     body {
-      background: #005B99;
+      background: #ffce00;
       padding: 0px;
       margin:  0px;
       font-family: 'Lato', sans-serif;
